@@ -6,6 +6,9 @@ Version 0.1-2, Oct 18, 2011
       Settings, Coefficients, Convergence.
     * dcmle failed with initsfun when length(n.clones)==1
       and n.clones>1: now fixed.
+    * dcmle checks for getOption("mc.cores") and uses it
+      when cl=NULL and mc.cores > 1. This allows
+      forking to happen automatically via the global option.
 
 Version 0.1-1, Sept 29, 2011
     * dcExample, sourceDcExample, listDcExample: new
